--- a/Pages/Participant/Participants.razor
+++ b/Pages/Participant/Participants.razor
@@ -14,33 +14,28 @@
     }
 </ul>
 
-<nav aria-label="Page navigation example">
-  <ul class="pagination justify-content-center">
-    <li class="page-item disabled">
-      <a class="page-link" href="#" tabindex="-1" aria-disabled="true">Previous</a>
-    </li>
-    @* @foreach(var page in Enumerable.Range(1, totalPages))
-    {
-        <li class="page-item" @key="page" @onclick="(() => ChangePage(page))"><a class="page-link" href="#">1</a></li>
-    } *@
-    <li class="page-item">
-      <a class="page-link" href="#">Next</a>
-    </li>
-  </ul>
-</nav>
+<Pagination GoToPage="ChangePage" totalPages="@totalPages" currentPage="@currentPage"/>
 
 @code {
     private PaginatedList<Participant> participants;
     private int totalPages;
     private int currentPage = 1;
 
-    protected override async Task OnInitializedAsync()
+    protected void FetchParticipants(int? page)
     {
-        var nextPage = page || currentPage;
+        var nextPage = page ?? currentPage;
         participants = ParticipantService.PaginatedList(nextPage);
         totalPages = participants.TotalPages;
         currentPage = participants.CurrentPage;
     }
 
-    
+    protected override async Task OnInitializedAsync()
+    {
+        FetchParticipants(null);
+    }
+
+    public void ChangePage(int page)
+    {
+        FetchParticipants(page);
+    }
 }
