--- a/Pages/Participant/Participants.razor
+++ b/Pages/Participant/Participants.razor
@@ -2,19 +2,40 @@
 @using ConferenceApp.Models
 @using ConferenceApp.Services
 @using ConferenceApp.Helpers
-@using System.Linq
 @inject IParticipantService ParticipantService
 
-<h1>PARTICIPANTS</h1>
+<h2>PARTICIPANTS</h2>
 
-<ul>
-    @foreach (var p in participants)
-    {
-        <li>@p.FirstName</li>
-    }
-</ul>
+<table class="table table-hover">
+    <thead>
+        <tr>
+            <th scope="col">#</th>
+            <th scope="col">Full Name</th>
+            <th scope="col">Email</th>
+            <th scope="col">Company</th>
+            <th scope="col">Position</th>
+            <th scope="col">Registration Date</th>
+            <th scope="col">Status</th>
+        </tr>
+    </thead>
+    <tbody>
+        @foreach (var participant in participants)
+        {
+            <tr>
+                <td>@participant.ID</td>
+                <td>@(participant.FirstName + ' ' + @participant.LastName)</td>
+                <td>@participant.Email</td>
+                <td>@participant.CompanyName</td>
+                <td>@participant.PositionInCompany</td>
+                <td>@participant.Inserted</td>
+                <td><span class="badge badge-primary">New</span></td>
+            </tr>
+        }
+    </tbody>
+</table>
 
-<Pagination GoToPage="ChangePage" totalPages="@totalPages" currentPage="@currentPage"/>
+
+<Pagination GoToPage="ChangePage" totalPages="@totalPages" currentPage="@currentPage" />
 
 @code {
     private PaginatedList<Participant> participants;
