Add participant service update method

--- a/Pages/Participant/Participants.razor
+++ b/Pages/Participant/Participants.razor
@@ -1,5 +1,6 @@
 @page "/participants"
 @using ConferenceApp.Services
+@using ConferenceApp.Pages.Participant.Services
 @inject IParticipantService ParticipantService
 @inject NavigationManager NavigationManager
 @inject ParticipantRazorService ParticipantRazorService
