--- a/Pages/Participant/ParticipantProfile.razor
+++ b/Pages/Participant/ParticipantProfile.razor
@@ -1,129 +1,160 @@
 ﻿@page "/participants/{ParticipantID:int}"
 @using ConferenceApp.Models
 @using ConferenceApp.Services
+@using ConferenceApp.Pages.Participant.Services
+@using ConferenceApp.Shared.Forms
 @inject IParticipantService ParticipantService
 @inject IGenderService GenderService
 @inject IParticipantRoleService ParticipantRoleService
 @inject ICountryService CountryService
 @inject NavigationManager NavigationManager
 @inject ParticipantRazorService ParticipantRazorService
+@implements IDisposable
 
 <div class="container">
     @if (participant != null)
     {
-        <form>
-            <fieldset disabled="@(editMode == false)">
-                <div class="row">
-                    <div class="col">
-                        <div class="form-group">
-                            <label for="first-name">First Name</label>
-                            <input type="text" class="form-control" id="first-name" value="@participant.FirstName">
-                        </div>
-                    </div>
-                    <div class="col">
-                        <div class="form-group">
-                            <label for="last-name">Last Name</label>
-                            <input type="text" class="form-control" id="last-name" value="@participant.LastName">
-                        </div>
-                    </div>
-                    <div class="col">
-                        <div class="form-group">
-                            <label for="email">Email</label>
-                            <input type="email" class="form-control" id="email" value="@participant.Email">
-                        </div>
-                    </div>
-                </div>
-
-                <div class="row">
-                    <div class="col">
-                        <div class="form-group">
-                            <label for="company">Company</label>
-                            <input type="text" class="form-control" id="company" value="@participant.CompanyName">
-                        </div>
-                    </div>
-                    <div class="col">
-                        <div class="form-group">
-                            <label for="position">Position</label>
-                            <input type="text" class="form-control" id="position" value="@participant.PositionInCompany">
-                        </div>
-                    </div>
-                </div>
-
-                <div class="row">
-                    <div class="col">
-                        <div class="form-group">
-                            <label for="gender">Gender</label>
-                            <select class="custom-select">
-                                @foreach (var gender in genders)
-                                {
-                                    <option selected="@(gender.ID == participant.Gender.ID)">@gender.Value</option>
-                                }
-                            </select>
-                        </div>
-                    </div>
-                    <div class="col">
-                        <div class="form-group">
-                            <label for="position">Role</label>
-                            <select class="custom-select">
-                                @foreach (var role in roles)
-                                {
-                                    <option selected="@(role.ID == participant.Role.ID)">@role.RoleName</option>
-                                }
-                            </select>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="row">
-                    <div class="col">
-                        <div class="form-group">
-                            <label for="country">Country</label>
-                            <select class="custom-select">
-                                @foreach (var country in countries)
-                                {
-                                    <option selected="@(country.ID == participant.Country.ID)">@country.Name</option>
-                                }
-                            </select>
-                        </div>
-                    </div>
-                    <div class="col">
-                        <div class="form-group">
-                            <label for="birthdate">Birth Date</label>
-                            <input type="text" class="form-control" id="birthdate" value="@participant.BirthDate">
-                        </div>
-                    </div>
-                </div>
-
-                <div class="row">
-                    <div class="col">
-                        <div class="form-group">
-                            <label for="date-of-arrival">Date of Arrival</label>
-                            <input type="text" class="form-control" id="date-of-arrival" value="@participant.DateOfArrival">
-                        </div>
-                    </div>
-                    <div class="col">
-                        <div class="form-group">
-                            <label for="date-of-departure">Date of Departure</label>
-                            <input type="text" class="form-control" id="date-of-departure" value="@participant.DateOfDeparture">
-                        </div>
-                    </div>
-                </div>
-            </fieldset>
+    <EditForm Model="@participant" OnValidSubmit="UpdateParticipant">
+        <DataAnnotationsValidator />
+        <ValidationSummary />
+        <fieldset disabled="@(editMode == false)">
             <div class="row">
-                <div class="form-group">
-                    @if (editMode)
-                    {
-                        <button @onclick="UpdateParticipant" @onclick:preventDefault type="submit" class="btn btn-primary ml-1">Submit</button>
-
-                    }
-                    @if (!editMode)
-                    {
-                        <button @onclick="SetEditMode" @onclick:preventDefault class="btn btn-success ml-1">Edit</button>
-                    }
-                    <button class="btn btn-danger ml-1">Delete</button>
+                <div class="col">
+                    <div class="form-group">
+                        <label for="first-name">First Name</label>
+                        <InputText type="text" class="form-control" id="first-name" @bind-Value="@participant.FirstName" />
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="form-group">
+                        <label for="last-name">Last Name</label>
+                        <InputText type="text" class="form-control" id="last-name" @bind-Value="@participant.LastName" />
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="form-group">
+                        <label for="email">Email</label>
+                        <InputText type="email" class="form-control" id="email" @bind-Value="@participant.Email" />
+                    </div>
                 </div>
             </div>
-        </form>
+
+            <div class="row">
+                <div class="col">
+                    <div class="form-group">
+                        <label for="company">Company</label>
+                        <InputText type="text" class="form-control" id="company" @bind-Value="@participant.CompanyName" />
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="form-group">
+                        <label for="position">Position</label>
+                        <InputText type="text" class="form-control" id="position" @bind-Value="@participant.PositionInCompany" />
+                    </div>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col">
+                    <div class="form-group">
+                        <label for="gender">Gender</label>
+                        <CustomInputSelect class="custom-select" @bind-Value="@participant.Gender.ID">
+                            @foreach (var gender in genders)
+                                {
+                                <option selected="@(gender.ID == participant.Gender.ID)" value="@gender.ID">@gender.Value</option>
+                                }
+                        </CustomInputSelect>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="form-group">
+                        <label for="position">Role</label>
+                        <CustomInputSelect class="custom-select" @bind-Value="@participant.Role.ID">
+                            @foreach (var role in roles)
+                                {
+                                <option selected="@(role.ID == participant.Role.ID)" value="@role.ID">@role.RoleName</option>
+                                }
+                        </CustomInputSelect>
+                    </div>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col">
+                    <div class="form-group">
+                        <label for="gender">Gender</label>
+                        <select class="custom-select">
+                            @foreach (var gender in genders)
+                                {
+                                <option selected="@(gender.ID == participant.Gender.ID)" value="@gender.ID">@gender.Value</option>
+                                }
+                        </select>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="form-group">
+                        <label for="position">Role</label>
+                        <select class="custom-select" >
+                            @foreach (var role in roles)
+                                {
+                                <option selected="@(role.ID == participant.Role.ID)" value="@role.ID">@role.RoleName</option>
+                                }
+                        </select>
+                    </div>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col">
+                    <div class="form-group">
+                        <label for="country">Country</label>
+                        <CustomInputSelect class="custom-select" @bind-Value="@participant.Country.ID">
+                            @foreach (var country in countries)
+                                {
+                                <option selected="@(country.ID == participant.Country.ID)" value="@country.ID">@country.Name</option>
+                                }
+                            /**/
+                        </CustomInputSelect>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="form-group">
+                        <label for="birthdate">Birth Date</label>
+                        <InputDate class="form-control" id="birthdate" @bind-Value="@participant.BirthDate" />
+                    </div>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col">
+                    <div class="form-group">
+                        <label for="date-of-arrival">Date of Arrival</label>
+                        <InputDate class="form-control" id="date-of-arrival" @bind-Value="@participant.DateOfArrival" />
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="form-group">
+                        <label for="date-of-departure">Date of Departure</label>
+                        <InputDate class="form-control" id="date-of-departure" @bind-Value="@participant.DateOfDeparture" />
+                    </div>
+                </div>
+            </div>
+        </fieldset>
+        <div class="row">
+            <div class="form-group">
+                @if (editMode)
+                {
+                    <button type="submit" class="btn btn-primary ml-1">Submit</button>
+
+                }
+                @if (!editMode)
+                {
+                    <button @onclick="SetEditMode" @onclick:preventDefault class="btn btn-success ml-1">Edit</button>
+                }
+                <button class="btn btn-danger ml-1">Delete</button>
+            </div>
+        </div>
+    </EditForm>
     }
 </div>
 
@@ -154,11 +185,16 @@
 
     private void UpdateParticipant()
     {
+        ParticipantService.Update(participant);
         editMode = false;
     }
 
     private string DisabledClass()
     {
         return editMode ? "" : "disabled";
+    }
+
+    public void Dispose()
+    {
     }
 }
