Rename participant update method

--- a/Pages/Participant/ParticipantProfile.razor
+++ b/Pages/Participant/ParticipantProfile.razor
@@ -176,7 +176,7 @@
 
     private void UpdateParticipant(EditContext editContext)
     {
-        ParticipantService.Update(participant, participantCountry, participantRole, participantGender);
+        ParticipantService.UpdateFromRazor(participant, participantCountry, participantRole, participantGender);
         editMode = false;
     }
 
